@@ -53,7 +53,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url("../img/stag-logo.png") transparent no-repeat 26px 27px;
+  background: transparent url("../img/codestag-logo.png") no-repeat center;
+  background-size: 70%;
 }
 .stag-options-header .stag-logo a:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=95);
@@ -184,12 +185,6 @@
   margin-bottom: 20px;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .stag-options-header .stag-logo a {
-    background-position: 27px -53px;
-    background-size: 50px 125px;
-  }
-}
 .stag-clear {
   clear: both;
 }
