@@ -4,7 +4,7 @@ Theme URI: https://codestag.com/themes/forest/
 Description: A portfolio WordPress theme with bold, flat design style and solid code framework.
 Author: Codestag
 Author URI: https://codestag.com
-Version: 1.3
+Version: 2.0
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: two columns, flexible-width, custom-background, custom-menu, editor-style, featured-images, theme-options, translation ready, threaded-comments
@@ -1725,3 +1725,8 @@ textarea {
   .main-navigation a:hover,
   .secondary-footer a:hover {
     opacity: .8; }
+
+.widget_recent_entries .post-date,
+.widget_categories,
+.widget_recent_entries, .site-footer a {
+  color: #fff; }
